--- a/index.html
+++ b/index.html
@@ -4,8 +4,37 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Voyage Via</title>
+
+<link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    Voyage Via we
+    <div id="outer">
+        <img src="images\Voyage Via.jpg" alt="">
+    </div>
+    <div id="nav">
+        <div>
+            <h2>Voyage Via</h2>
+        </div>
+        <div>
+         <p>Discover</p>
+         <p>Community</p>
+         <p>Special Deals</p>
+         <p>About Us</p>
+         <p>Sign In</p>
+         <button><p>Register</p></button>
+        </div>
+    </div>
+    <div id="center">
+         <h1>   Enjoy Your </h1>
+         <h1>Dream Vocation</h1>
+         <p>We alsways make our customers happy by providing many choices.</p>
+    </div>
+    <div id="explore">
+        <div><button><p>Explore Now</p></button></div>
+        <div>1</div>
+        <div>1</div>
+        <div>1</div>
+
+    </div>
 </body>
 </html>
