--- a/log-in.html
+++ b/log-in.html
@@ -25,7 +25,8 @@
                     <form>
                     <span>
                     <h2>Log-In</h2>
-                    <br><br>
+                    <br>
+                    <p id="text">Voyage Via welcome's you</p>
                     <br>
                     <label for="email">Email</label>
                     <br>
