--- a/logout.html
+++ b/logout.html
@@ -31,12 +31,11 @@
         <p id="disc">Discover</p>
         <p id="commu">Community</p>
         <p id="deal">Special Deals</p>
-        <p><a href="./about.html" >About Us</a></p>
-        <p><a href="./log-in.html">Log-In</a></p>
+        <p ><a href="./about.html" >About Us</a></p>
+        <p id="logp"><a href="./index.html">Log out</a></p>
 
         <button>
-          <a href="./register.html"
-          ><p id="regp">Register</p></a>
+          <p id="regp">Register</p>
         </button>
       </div>
     </div>
@@ -137,4 +136,4 @@
   </body>
 </html>
 
-<script src="/windy-picture-8509/scripts/homepage.js"></script>
+<script src="/windy-picture-8509/scripts/logout.js"></script>
