--- a/register.html
+++ b/register.html
@@ -22,7 +22,7 @@
                     <span>
                         <h2>Register</h2>
             
-                        <p id="text">Voyage Via welcome's you</p>
+                        <p id="text">Space Odyssey welcome's you</p>
         
                         <label for="name">Name</label>
                         <br>
