--- a/log-in.html
+++ b/log-in.html
@@ -26,7 +26,7 @@
                     <span>
                     <h2>Log-In</h2>
                     <br>
-                    <p id="text">Voyage Via welcome's you</p>
+                    <p id="text">Space Odyssey welcome's you</p>
                     <br>
                     <label for="email">Email</label>
                     <br>
