--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     </div>
     <div id="center">
       <h1>Enjoy Your</h1>
-      <h1 id="h1">Dream Vocation</h1>
+      <h1 id="h1">Dream Vacation</h1>
       <p>We always make our customers happy by providing many choices.</p>
     </div>
     <div id="explore">
@@ -115,7 +115,7 @@
           <!-- <p>price</p> -->
         </div>
         <div>
-          <p class="pgray">AveragePrice</p>
+          <p class="pgray">BusPrices</p>
           <p id="price" class="pcolor">₹500-₹800</p>
         </div>
       </div>
