--- a/logout.html
+++ b/logout.html
@@ -46,7 +46,7 @@
     </div>
     <div id="explore">
       <div>
-        <button id="exbutton"><p>Explore Now</p></button>
+        <button id="exbutton"><p>Explore Hotels</p></button>
       </div>
       <div>
         <div>
@@ -114,7 +114,7 @@
           <!-- <p>price</p> -->
         </div>
         <div>
-          <p class="pgray">AveragePrice</p>
+          <p class="pgray">BusPrices</p>
           <p id="price" class="pcolor">₹500-₹800</p>
         </div>
       </div>
