--- a/explore.html
+++ b/explore.html
@@ -58,4 +58,4 @@
   </body>
 </html>
 
-<script src="/windy-picture-8509/scripts/explore.js"></script>
+<script src="./scripts/explore.js"></script>
