--- a/logout.html
+++ b/logout.html
@@ -136,4 +136,4 @@
   </body>
 </html>
 
-<script src="/windy-picture-8509/scripts/logout.js"></script>
+<script src="./scripts/logout.js"></script>
