--- a/index.html
+++ b/index.html
@@ -137,4 +137,4 @@
   </body>
 </html>
 
-<script src="/windy-picture-8509/scripts/homepage.js"></script>
+<script src="./scripts/homepage.js"></script>
