--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <p id="commu">Community</p>
         <p id="deal">Special Deals</p>
         <p><a href="./about.html" >About Us</a></p>
-        <p><a href="./log-in.html">Log-In</a></p>
+        <p><a href="./log-in.html">Login</a></p>
 
         <button>
           <a href="./register.html"
