--- a/log-in.html
+++ b/log-in.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Log-in</title>
+    <title>Login</title>
     <link rel="stylesheet" href="./styles/log-in.css">
     <link rel="icon" href="https://img.icons8.com/?size=512&id=LdBR9a3vFiwK&format=png">
 
@@ -24,7 +24,7 @@
                 <div id="box">
                     <form>
                     <span>
-                    <h2>Log-In</h2>
+                    <h2>Login</h2>
                     <br>
                     <p id="text">Space Odyssey welcome's you</p>
                     <br>
