--- a/logout.html
+++ b/logout.html
@@ -41,7 +41,7 @@
     </div>
     <div id="center">
       <h1>Enjoy Your</h1>
-      <h1 id="h1">Dream Vocation</h1>
+      <h1 id="h1">Dream Vacation</h1>
       <p>We always make our customers happy by providing many choices.</p>
     </div>
     <div id="explore">
